--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ rvm:
 - 2.2.0
 sudo: false
 before_install:
-  - git config user.name "${GIT_USER_NAME}"
-  - git config user.email "{GIT_USER_EMAIL}"
+  - git config --global user.name "${GIT_USER_NAME}"
+  - git config --global user.email "${GIT_USER_EMAIL}"
+  - echo "${GIT_USER_EMAIL}"
 script: bundle exec rake deploy
 
 env:
